# python_ckks

./: pyproject.toml
examples/: precision_example.py
src/ckks/: arithmetic.py  arithmetic64.py  distributions.py  distributions64.py  precision_example.py  scheme.py
