[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ckks"
version = "1.0.23"
authors = [
  { name="mmazz", email="mazzantimatiass@gmail.com" },
]
description = "A toy implementation of the FHE scheme  CKKS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mmazz/python_ckks"
